<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    style="@style/RelativeLayoutStyle"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

<FrameLayout
    tools:context=".LoginFragment"
    style="@style/linearParent">

    <TextView
        android:id="@+id/tv_logo"
        style="@style/headerTextPrimary"
        android:layout_width="wrap_content"
        android:text="@string/login" />

    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="true"
        android:layout_marginTop="170dp"
        android:hint="@string/e_mail"
        style="@style/parent"
        android:id="@+id/login_email_input">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_email"
        style="@style/modifiedEditText"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
  </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:id="@+id/login_password_input"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:layout_marginTop="250dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        style="@style/modifiedEditText"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>
</com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="330dp">

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_alignEnd="@id/login_button"
            android:layout_marginTop="10dp"
            style="@style/TextViewStyle"
            android:onClick="onClick"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/login_button"
            style="@style/loginButton"
            android:layout_marginTop="47dp"
            android:onClick="onClick"
            android:text="@string/button_login" />

        <TextView
            android:id="@+id/login_any_account"
            android:layout_alignEnd="@id/login_button"
            android:layout_marginTop="118dp"
            style="@style/TextViewStyle"
            android:onClick="onClick"
            android:text="@string/account_sign_up" />

    </RelativeLayout>

</FrameLayout>
    </RelativeLayout>