<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RelativeLayoutStyle"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/activity_main">

<FrameLayout
    tools:context=".RegisterFragment"
    style="@style/linearParent">

    <TextView
        android:id="@+id/tv_logo"
        style="@style/headerTextPrimary"
        android:layout_width="wrap_content"
        android:text="@string/register" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="150dp"
        android:hint="@string/username"
        android:id="@+id/register_username_input">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_name"
        style="@style/modifiedEditText"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="220dp"
        android:hint="@string/mobile_number"
        android:id="@+id/register_number_input">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_number"
        style="@style/modifiedEditText"
        android:importantForAutofill="no"
        android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="300dp"
        android:hint="@string/e_mail"
        android:id="@+id/register_email_input">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_email"
        style="@style/modifiedEditText"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="380dp"
        app:errorEnabled="true"
        android:id="@+id/register_password_input"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password"
        style="@style/modifiedEditText"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="440dp">

        <Button
            android:id="@+id/register_button"
            style="@style/loginButton"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            android:text="@string/button_sign_up" />

        <TextView
            android:id="@+id/register_any_account"
            android:onClick="onClick"
            style="@style/TextViewStyle"
            android:layout_alignEnd="@id/register_button"
            android:layout_marginTop="65dp"
            android:text="@string/sign_in" />

    </RelativeLayout>

</FrameLayout>
    </RelativeLayout>
