<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RelativeLayoutStyle"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

<FrameLayout
    tools:context=".ResetPasswordFragment"
    style="@style/linearParent">

    <TextView
        android:id="@+id/tv_logo"
        style="@style/headerTextPrimary"
        android:layout_width="wrap_content"
        android:text="@string/reset" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:id="@+id/reset_email_input"
        android:layout_marginTop="170dp"
        android:hint="@string/e_mail">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_email"
        style="@style/modifiedEditText"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        app:errorEnabled="true"
        android:id="@+id/reset_password_input"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="250dp"
        android:hint="@string/password">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password"
        style="@style/modifiedEditText"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        app:errorEnabled="true"
        android:id="@+id/reset_confirm_input"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="340dp"
        android:hint="@string/confirm_password">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_reset_password"
        style="@style/modifiedEditText"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp">

        <Button
            android:id="@+id/confirm_button"
            style="@style/loginButton"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/button_login" />

        <TextView
            android:id="@+id/confirm_any_account"
            android:onClick="onClick"
            style="@style/TextViewStyle"
            android:layout_alignEnd="@id/confirm_button"
            android:layout_marginTop="80dp"
            android:text="@string/account_sign_up" />

    </RelativeLayout>
</FrameLayout>
    </RelativeLayout>